--- a/src/Components/Movie/Movie.css
+++ b/src/Components/Movie/Movie.css
@@ -2,6 +2,7 @@
     background-color:var(--g-color-primary);
     animation: opacity-fade-in 0.1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s both;
     display: flex;
+    height: 100%;
     padding: var(--g-spacing-x-large);
 }
 
