--- a/src/Css/Resets.css
+++ b/src/Css/Resets.css
@@ -22,3 +22,12 @@ html, body {
     height: 100%;
 }
 
+html {
+    box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: inherit;
+}
