--- a/src/Css/Settings.css
+++ b/src/Css/Settings.css
@@ -26,4 +26,5 @@
 .c-root {
     background-color: var(--g-color-primary);
     color: var(--g-color-text);
+    height: 100%;
 }
